# SkypeRec

./: .gitignore  CMakeLists.txt  INSTALL  README  README.md  TODO  call.cpp  call.h  common.cpp  gui.cpp  gui.h  make_ts.sh  makeversion  mp3writer.cpp  mp3writer.h  preferences.cpp  recorder.cpp  recorder.h  resources.qrc  skype-call-recorder.desktop  skype-call-recorder.spec  skype.cpp  skyperec.control  skyperec.desktop  smartwidgets.h  trayicon.cpp  trayicon.h  vorbiswriter.cpp  vorbiswriter.h  wavewriter.cpp  writer.cpp  writer.h
src/: call.cpp  call.h  common.cpp  common.h  gui.cpp  gui.h  mp3writer.cpp  mp3writer.h  preferences.cpp  preferences.h  recorder.cpp  recorder.h  settings.cpp  settings.h  skype.cpp  skype.h  trayicon.cpp  trayicon.h  utils.cpp  utils.h  vorbiswriter.cpp  vorbiswriter.h  wavewriter.cpp  wavewriter.h  writer.cpp  writer.h
translations/: skyperec_ru.ts
